frontend/src/Styles/Home.css
.landing-page {
  font-family: Arial, sans-serif;
  color: var(--text-color);
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.hero {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  height: 90vh;
  position: relative;
  background: var(--hero-bg-gradient);
  color: var(--hero-text-color);
  overflow: hidden;
  padding-left: 5%;
  padding-right: 5%;
}

.hero-content {
  z-index: 1;
  text-align: center;
  max-width: 40%;
}

.hero-content h1 {
  font-size: 4rem;
  font-weight: 700;
  margin: 0;
  line-height: 1.1;
}

.hero-content p {
  font-size: 1.5rem;
  margin: 20px 0;
}

.info-card {
  background: var(--info-card-bg);
  z-index: 1;
  text-align: center;
  max-width: 40%;
  margin-left: auto;
  border-radius: 10px;
  color: var(--info-card-text);
  border: 1px solid var(--card-border-color);
}

.info-card h2 {
  color: var(--text-color);
  font-size: 1.5rem;
  margin-top: 10px;
  padding-left: 5px;
}

.info-card p {
  font-size: 1rem;
  margin-bottom: 20px;
  padding: 10px;
  color: var(--info-card-text);
}

.info-card-button {
  padding: 10px 20px;
  font-size: 1rem;
  color: var(--button-text-color);
  background-color: var(--button-bg-color);
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.info-card-button:hover {
  background-color: var(--button-hover-bg-color);
}

.cta-button {
  padding: 10px 20px;
  font-size: 1rem;
  color: var(--text-color);
  background-color: var(--button-bg-color-2);
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.cta-button:hover {
  background-color: var(--button-hover-bg-color-2);
}

.abstract-shapes {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  z-index: 0;
}

.circle {
  position: absolute;
  top: 20%;
  left: 60%;
  width: 150px;
  height: 150px;
  background-color: var(--hero-shape-circle-color);
  border-radius: 50%;
}

.triangle {
  position: absolute;
  top: 60%;
  left: 80%;
  width: 0;
  height: 0;
  border-left: 80px solid transparent;
  border-right: 80px solid transparent;
  border-bottom: 140px solid var(--hero-shape-triangle-color);
  transform: rotate(-20deg);
}

.rectangle {
  position: absolute;
  top: 40%;
  left: 50%;
  width: 120px;
  height: 60px;
  background-color: var(--hero-shape-rectangle-color);
}

.features {
  padding: 60px 20px;
  background-color: var(--background-color);
  text-align: center;
  position: relative;
  color: var(--text-color);
}

.features-header {
  display: inline-block;
  position: relative;
}

.features-header h2 {
  font-size: 2rem;
  color: var(--text-color);
}

.underline {
  position: absolute;
  top: 110%;
  left: 50%;
  width: 80px;
  height: 6px;
  background-color: var(--button-bg-color);
  transform: translateX(-50%);
}

.feature-cards {
  display: flex;
  gap: 20px;
  justify-content: center;
  margin-top: 40px;
}

.feature-card {
  flex: 1;
  max-width: 300px;
  background-color: var(--card-bg-color);
  padding: 20px;
  border-radius: 8px;
  box-shadow: 0 4px 8px var(--card-shadow-color);
  border: 1px solid var(--card-border-color);
}

.feature-card h3 {
  font-size: 1.25rem;
  margin-bottom: 10px;
  color: var(--text-color);
}

.feature-card p {
  font-size: 1rem;
  color: var(--info-card-text);
}

.feature-card button a {
  color: var(--button-text-color);
  text-decoration: none;
}

